--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -8,6 +8,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .product-card:hover {
